<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">

    <Button
        android:id="@+id/button_menu_guided"
        android:layout_width="296dp"
        android:layout_height="81dp"
        android:layout_marginBottom="60dp"
        android:text="@string/menu_guided"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_menu_free"
        android:layout_width="296dp"
        android:layout_height="81dp"
        android:layout_marginBottom="30dp"
        android:text="@string/menu_free"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_menu_guided"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_menu_info"
        android:layout_width="296dp"
        android:layout_height="81dp"
        android:layout_marginBottom="30dp"
        android:text="@string/menu_info"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_menu_free"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_menu_theme_pascal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="Pascal"
        android:textColor="@color/bany_text_1"
        app:backgroundTint="@color/bany_button_bg_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_menu_theme_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:text="Claro"
        android:textColor="@color/bany_text_2"
        app:backgroundTint="@color/bany_button_bg_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toEndOf="@+id/button_menu_theme_pascal"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_menu_theme_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:text="Oscuro"
        android:textColor="@color/bany_text_0"
        app:backgroundTint="@color/bany_button_bg_0"
        app:layout_constraintEnd_toStartOf="@+id/button_menu_theme_pascal"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>